# tmls_hackathon

./: .env.example  .gitignore  HOW-IT-WORKS.md  Makefile  README.md  food_robotics_machinery_data.csv  package-lock.json  pyproject.toml  railway.json  requirements.txt  robot_failures_model.py  robot_model.pkl
backend/: README.md
backend/app/: config.py  issues.py  main.py  runcache.py  sessions.py
corpus/: README.md
corpus/haccp/: README.md
corpus/incidents/: INC-2025-0078.md  INC-2025-0102.md  INC-2025-0155.md  INC-2025-0204.md  INC-2025-0291.md  INC-2025-0317.md  INC-2025-3115.md  INC-2025-3210.md  INC-2025-3401.md  INC-2025-3402.md  INC-2025-3403.md  INC-2025-3404.md  INC-2025-3405.md  INC-2025-3406.md  README.md
corpus/manuals/: README.md  cip-system.md  conveyor-c-series.md  croissant-laminator.md  labeling-system.md  modular-belt-conveyor.md  proofer-p-12.md  robotic-decorator.md  spiral-freezer.md  spiral-mixer-sm-600.md  tunnel-oven-xb-2400.md
corpus/sops/: README.md  bearing-replacement.md  mixer-lubrication.md  oven-element-replacement.md  preventive-lubrication.md
corpus/work_orders/: README.md
cv/: README.md  infer.py  train.py
cv/datasets/: README.md
cv/synthetic/: README.md
data/: README.md  relabel_ai4i.py
docs/: README.md  architecture.md  demo-script.md  judging-rubric.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentWorkflow.tsx  Chart.tsx  ClassProbabilityBar.tsx  ConfidenceChart.tsx  (+17 more)
scripts/: dev.sh  serve-ngrok.sh
(+41 files in other folders)
